Fix img max-width and figure gap

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,7 +4,3 @@ $primary: #222;
 // Typography
 $indentation: 20px;
 $border: 1px solid $primary;
-
-// Size
-$width: 80ch;
-$gap: 1em;
